<resources>
    <string name="alternates_for_a">\@àáâãäåæ</string>
    <string name="alternates_for_e">3èéêë</string>
    <string name="alternates_for_h">=_-</string>
    <string name="alternates_for_g">*</string>
    <string name="alternates_for_i">ìíîï8</string>
    <string name="alternates_for_j">+</string>
    <string name="alternates_for_k">(</string>
    <string name="alternates_for_x">\"</string>
    <string name="alternates_for_b">;</string>
    <string name="alternates_for_m">\?</string>
    <string name="alternates_for_f">&amp;</string>
    <string name="alternates_for_o">òóôõöœø9</string>
    <string name="alternates_for_u">ùúûü7</string>
    <string name="alternates_for_s">\#§ß</string>
    <string name="alternates_for_n">ňñ/</string>
    <string name="alternates_for_c">"'čç"</string>
    <string name="alternates_for_y">ýÿ6</string>
    <string name="alternates_for_q">1</string>
    <string name="alternates_for_w">2</string>
    <string name="alternates_for_d">$¢£€¥₣₤</string>
    <string name="alternates_for_r">4ř</string>
    <string name="alternates_for_t">5ť</string>
    <string name="alternates_for_z">!ž</string>
    <string name="alternates_for_l">)</string>
    <string name="alternates_for_p">0</string>
    <string name="alternates_for_v">:</string>
    <string name="alternates_for_ae" />
    <string name="alternates_for_oe" />
    <string name="alternates_for_cyrillic_e" />
    <string name="alternates_for_cyrillic_soft_sign" />
    <string name="alternates_for_a_umlaut" />
    <string name="alternates_for_o_umlaut" />
    <string name="alternates_for_abc">2</string>
    <string name="alternates_for_def">3</string>
    <string name="alternates_for_ghi">4</string>
    <string name="alternates_for_jkl">5</string>
    <string name="alternates_for_mno">6</string>
    <string name="alternates_for_pqrs">7</string>
    <string name="alternates_for_tuv">8</string>
    <string name="alternates_for_wxyz">9</string>
    <string name="alternates_for_qw">1</string>
    <string name="alternates_for_er">2</string>
    <string name="alternates_for_ty">3</string>
    <string name="alternates_for_ui">4</string>
    <string name="alternates_for_op">5</string>
    <string name="alternates_for_as">6</string>
    <string name="alternates_for_df">7</string>
    <string name="alternates_for_gh">8</string>
    <string name="alternates_for_jk">9</string>
    <string name="alternates_for_ll">0</string>
    <string name="alternates_for_zx">\#</string>
    <string name="alternates_for_cv">$</string>
    <string name="alternates_for_bn">\@</string>
    <string name="alternates_for_mm">-</string>
    <string name="alternates_for_z_qwerz">ζźž6</string>
    <string name="alternates_for_y_qwerz">!ýÿỳ¥υ</string>
    <string name="word_separators">".\u0009 ,;:!?
()[]*&amp;@{}/&lt;>_-+=|\""</string>
    <string name="sentence_separators">.,!?)</string>
    <string name="suggested_punctuations">"!?,\"':()-/@_"</string>
    <string name="settings_key_mode_auto">0</string>
    <string name="settings_key_mode_always_show">1</string>
    <string name="settings_key_mode_always_hide">2</string>
    <string name="subtype_generic">%s</string>
    <string name="english_ime_name">𝒂𝒃𝒅𝒖𝒍𝒍𝒂𝒉 𝒌𝒆𝒚𝒃𝒐𝒂𝒓𝒅</string>
    <string name="english_ime_settings">settings</string>
    <string name="english_ime_input_options">Input options</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="hit_correction">Correct typing errors</string>
    <string name="hit_correction_summary">Enable input error correction</string>
    <string name="hit_correction_land">Landscape input errors</string>
    <string name="hit_correction_land_summary">Enable input error correction</string>
    <string name="auto_correction">Word suggestions</string>
    <string name="auto_correction_summary">Automatically correct the previous word</string>
    <string name="prediction">Word suggestions</string>
    <string name="prediction_category">Word suggestion settings</string>
    <string name="prediction_summary">Enable auto completion while typing</string>
    <string name="auto_complete_dialog_title">Auto completion</string>
    <string name="prediction_landscape">Increase text field size</string>
    <string name="prediction_landscape_summary">Hide word suggestions in landscape view</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the start of a sentence</string>
    <string name="auto_punctuate">Auto-punctuate</string>
    <string name="auto_punctuate_summary" />
    <string name="long_press_delay">Long press delay</string>
    <string name="long_press_delay_summary">%d milliseconds</string>
    <string name="quick_fixes">Quick fixes</string>
    <string name="quick_fixes_summary">Corrects commonly typed mistakes</string>
    <string name="show_suggestions">Show suggestions</string>
    <string name="show_suggestions_summary">Display suggested words while typing</string>
    <string name="auto_complete">Auto-complete</string>
    <string name="auto_complete_summary">Spacebar and punctuation automatically insert highlighted word</string>
    <string name="prefs_settings_key">Show settings key</string>
    <string name="settings_key_mode_auto_name">Automatic</string>
    <string name="settings_key_mode_always_show_name">Always show</string>
    <string name="settings_key_mode_always_hide_name">Always hide</string>
    <string name="bigram_suggestion">Bigram Suggestions</string>
    <string name="bigram_suggestion_summary">Use previous word to improve suggestion</string>
    <string name="prediction_none">0</string>
    <string name="prediction_basic">1</string>
    <string name="prediction_full">2</string>
    <string name="added_word">%s : Saved</string>
    <string name="tip_long_press">Hold a key down to see accents (ø, ö, etc.)</string>
    <string name="tip_dismiss">Press the back key ↶ to close the keyboard at any point</string>
    <string name="tip_access_symbols">Access numbers and symbols</string>
    <string name="tip_add_to_dictionary">Press and hold the left-most word to add it to the dictionary</string>
    <string name="touch_to_continue">Touch this hint to continue »</string>
    <string name="touch_to_finish">Touch here to close this hint and start typing!</string>
    <string name="tip_to_open_keyboard"><b>The keyboard opens any time you touch a text field</b></string>
    <string name="tip_to_view_accents"><b>"Touch &amp; hold a key to view accents
(ø, ö, ô, ó, and so on)"</b>" "</string>
    <string name="tip_to_open_symbols"><b>Switch to numbers and symbols by touching this key</b></string>
    <string name="tip_to_close_symbols"><b>Go back to letters by touching this key again</b></string>
    <string name="tip_to_launch_settings"><b>Touch &amp; hold this key to change keyboard settings, like auto complete</b></string>
    <string name="tip_to_start_typing"><b>Try it!</b></string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_done_key">Done</string>
    <string name="label_send_key">Send</string>
    <string name="label_symbol_key">\?123</string>
    <string name="label_phone_key">123</string>
    <string name="label_alpha_key">ABC</string>
    <string name="label_alt_key">ALT</string>
    <string name="voice_warning_title">Voice input</string>
    <string name="voice_warning_locale_not_supported">Voice input is not currently supported for your language, but does work in English.</string>
    <string name="voice_warning_may_not_understand">"Voice input is an experimental feature using Google's networked speech recognition."</string>
    <string name="voice_warning_how_to_turn_off">To turn off voice input, go to keyboard settings.</string>
    <string name="voice_hint_dialog_message">To use voice input, press the microphone button or slide your finger across the on-screen keyboard.</string>
    <string name="voice_listening">Speak now</string>
    <string name="voice_working">Working</string>
    <string name="voice_initializing" />
    <string name="voice_error">Error. Please try again.</string>
    <string name="voice_network_error">"Couldn't connect"</string>
    <string name="voice_too_much_speech">Error, too much speech.</string>
    <string name="voice_audio_error">Audio problem</string>
    <string name="voice_server_error">Server error</string>
    <string name="voice_speech_timeout">No speech heard</string>
    <string name="voice_no_match">No matches found</string>
    <string name="voice_not_installed">Voice search not installed</string>
    <string name="voice_swipe_hint"><b>Hint:</b> Swipe across keyboard to speak</string>
    <string name="voice_punctuation_hint"><b>Hint:</b> Next time, try speaking punctuation like \"period\", \"comma\", or \"question mark\".</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="voice_input">Voice input</string>
    <string name="voice_mode_main">0</string>
    <string name="voice_mode_symbols">1</string>
    <string name="voice_mode_off">2</string>
    <string name="auto_submit">Auto submit after voice</string>
    <string name="auto_submit_summary">Automatically press enter when searching or going to the next field.</string>
    <string name="open_the_keyboard"><font size="17"><b>"Open the keyboard
"</b></font><font size="3">"
"</font>Touch any text field.</string>
    <string name="close_the_keyboard"><font size="17"><b>"Close the keyboard
"</b></font><font size="3">"
"</font>Press the Back key.</string>
    <string name="touch_and_hold"><font size="17"><b>"Touch &amp; hold a key for options
"</b></font><font size="3">"
"</font>Access punctuation and accents.</string>
    <string name="keyboard_settings"><font size="17"><b>"Keyboard settings
"</b></font><font size="3">"
"</font>Touch &amp; hold the <b>?123</b> key.</string>
    <string name="popular_domain_0">.com</string>
    <string name="popular_domain_1">.net</string>
    <string name="popular_domain_2">.org</string>
    <string name="popular_domain_3">.gov</string>
    <string name="popular_domain_4">.co.uk</string>
    <string name="popular_domain_5">.org.uk</string>
    <string name="selectInputMethod">Select input method</string>
    <string name="language_selection_title">Input languages</string>
    <string name="language_selection_summary">Slide finger on spacebar to change language</string>
    <string name="lang_not_istalled">"Don't forget to download %s language pack to enable suggestions"</string>
    <string name="hint_add_to_dictionary">← Touch again to save</string>
    <string name="download_dictionary">Download Dictionary</string>
    <string name="download_dictionary_summary">Download Perfect keyboard language pack</string>
    <string name="has_dictionary">Dictionary available (build-in dictionary)</string>
    <string name="dictionary_installed">Dictionary installed</string>
    <string name="dictionary_not_installed">Dictionary not installed</string>
    <string name="prefs_enable_log">Enable user feedback</string>
    <string name="prefs_description_log">Help improve this input method editor by automatically sending usage statistics and crash reports to Google.</string>
    <string name="prefs_enable_recorrection">Touch to correct words</string>
    <string name="enable_keyboard">Enable Abdullah keyboard</string>
    <string name="switch_to_keyboard">Switch to Abdullah keyboard</string>
    <string name="BackupPro_instructions">Welcome to Perfect keyboard, to enable the keyboard you need to:</string>
    <string name="share_with_your_friends">Share</string>
    <string name="c3">clear</string>
    <string name="c4">close after paste</string>
    <string name="c5">paste and send</string>
    <string name="c6">clipboard</string>
</resources>