<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="#ff000000" android:padding="0.0px" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:gravity="top" android:orientation="vertical" android:background="#ff000000" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <TextView android:textSize="20.0dip" android:textColor="#ffffffff" android:gravity="center" android:autoLink="all" android:id="@id/textView1" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/english_ime_name" />
            <TextView android:textSize="18.0dip" android:textColor="#ffffffff" android:gravity="center" android:autoLink="all" android:id="@id/textView2" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/BackupPro_instructions" android:layout_below="@id/textView1" />
            <Button android:textSize="18.0dip" android:textColor="#ff000000" android:gravity="center" android:id="@id/share_keyboard" android:background="#ffcccccc" android:layout_width="700.0px" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:text="@string/share_with_your_friends" android:layout_below="@id/switch_to_keyboard" android:layout_centerHorizontal="true" />
            <Button android:textSize="0.0dip" android:textColor="#ff000000" android:gravity="center" android:id="@id/enable_keyboard" android:background="#ffcccccc" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_marginBottom="0.0dip" android:text="@string/enable_keyboard" android:layout_below="@id/textView2" android:layout_centerHorizontal="true" />
            <Button android:textSize="0.0dip" android:textColor="#ff000000" android:gravity="center" android:id="@id/switch_to_keyboard" android:background="#ffcccccc" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_marginBottom="0.0dip" android:text="@string/switch_to_keyboard" android:layout_below="@id/enable_keyboard" android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>